--- a/ntask-api/package.json
+++ b/ntask-api/package.json
@@ -16,7 +16,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "consign": "^0.1.6",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "sequelize": "^4.41.1",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
