--- a/task-api/package.json
+++ b/task-api/package.json
@@ -14,6 +14,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "consign": "^0.1.6",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "sequelize": "^4.42.0",
+    "sqlite": "^3.0.0"
   }
 }
